deploys/harbor/harbor-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: harbor-buffering
  namespace: harbor
spec:
  buffering:
    maxRequestBodyBytes: 0 # Unlimited for image uploads
